--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "imask": "*",
     "pinia": "^2.0.32",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.2.47",
@@ -25,11 +27,14 @@
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
+    "body-parser": "^1.20.1",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
+    "express": "^4.18.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
     "sass": "^1.60.0",
+    "sqlite3": "^5.1.6",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
     "vue-tsc": "^1.2.0"
