--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "buffer": "5.7.1",
+    "cors": "^2.8.5",
+    "finale-rest": "^1.2.0",
     "imask": "*",
+    "pg-hstore": "^2.3.4",
     "pinia": "^2.0.32",
     "pinia-plugin-persistedstate": "^3.1.0",
+    "sequelize": "^6.31.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
+    "wkx": "^0.5.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
@@ -34,6 +40,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
     "sass": "^1.60.0",
+    "sequelize-cli": "^6.6.0",
     "sqlite3": "^5.1.6",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
